@startuml

class Client
interface Visitor
class ConcreteVisitor
class ObjectStruture
abstract Element
class ConcreteElement

ConcreteVisitor -up-|> Visitor
ConcreteElement -up-|> Element
Client -down-> ObjectStruture
Client -right-> Visitor
ObjectStruture -right-> Element
Element .up.> Visitor

abstract Element {
    +Accept(v: Visitor)
}
@enduml
